--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "server": "nodemon server --ignore client",
     "client": "cd client && npm start",
-    "start": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client \""
+    "dev": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client \"",
+    "start": "node server.js",
+    "clientinstall": "npm install --prefix client",
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
