--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "server": "nodemon server --ignore client",
-    "client": "cd client && npm start",
-    "dev": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client \"",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \" npm run server\" \" npm run client \"",
     "start": "node server.js",
     "clientinstall": "npm install --prefix client",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
