--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^4.2.1",
     "framer-motion": "^9.0.1",
     "html-react-parser": "^3.0.9",
     "html-to-text": "^9.0.4",
@@ -20,6 +21,7 @@
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
@@ -51,5 +53,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
