--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
     "react-icons": "^4.4.0",
+    "socket.io": "^4.6.1",
     "validator": "^13.7.0"
   }
 }
