--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon server --ignore client",
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \" npm run server\" \" npm run client \"",
-    "start": "node server.js",
-    "clientinstall": "npm install --prefix client",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
@@ -19,20 +18,19 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
-    "concurrently": "^7.3.0",
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
-    "http-status-codes": "^2.2.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.4",
-    "mongoose": "^6.5.1",
+    "moment": "^2.30.1",
+    "mongoose": "^6.12.8",
     "morgan": "^1.10.0",
-    "react-icons": "^4.4.0",
-    "socket.io": "^4.6.1",
-    "validator": "^13.7.0"
+    "react-icons": "^4.12.0",
+    "socket.io": "^4.7.5",
+    "validator": "^13.11.0"
   }
 }
