--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,15 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
+    "html-react-parser": "^5.1.18",
+    "jodit-react": "^4.1.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
