--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -26,6 +26,7 @@
       "@assets/*": ["./src/assets/*"],
       "@components/*": ["./src/components/*"],
       "@features/*": ["./src/features/*"],
+      "@interface/*": ["./src/interface/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@redux/*": ["./src/redux/*"],
       "@routes/*": ["./src/routes/*"],
